# mp2-2025-lab6-Dijkstra

gtest/: CMakeLists.txt  tests.cpp
include/: binheap.h  triheap.h
src/: main.cpp
